--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -8,6 +8,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/battleground.battleground
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BattleTankGamemode_BP.BattleTankGamemode_BP_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -46,5 +57,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
